--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Votación</title>
     <script defer src="script.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>    
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script> <!-- Cargar el geocodificador de Leaflet -->
     <style>
         body {
             font-family: Arial, sans-serif;
